<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="#000000"
    android:orientation="vertical"

    tools:context="com.example.zaher.prayertimes.main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"

                style="@style/BigTextView"
                android:keepScreenOn="true"
                android:text="@string/title_activity_main"

                />

            <TextView
                android:id="@+id/tv_hijri"

                style="@style/BigTextView"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"

                style="@style/BigTextView"
                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/remaining"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/time"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/alfajr"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alfajer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/alzuhr"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alzuhr"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/alasr"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alasr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/almughreb"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_almughreb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/aleshaa"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_aleshaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/empty"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
